# NFC-Rental-System

./: .gitignore  README.md  generate_directory.ps1
RentScan/: CMakeLists.txt  DEMO_GUIDE.md  README.md
RentScan/backend_sim/: README.md  simulate_backend.py
RentScan/common/include/: rentscan_protocol.h
RentScan/gateway_device/: CMakeLists.txt  prj.conf
RentScan/gateway_device/include/: gateway_config.h
RentScan/gateway_device/src/: ble_central.c  ble_central.h  gateway_service.c  gateway_service.h  main.c  shell_commands.c
RentScan/main_device/: CMakeLists.txt  prj.conf
RentScan/main_device/include/: main_device_config.h
RentScan/main_device/src/: ble_service.c  ble_service.h  main.c  nfc_handler.c  nfc_handler.h  rental_manager.c  rental_manager.h
RentScan/test_loopback/: CMakeLists.txt  prj.conf
RentScan/test_loopback/build_1/: .vscode-nrf-connect.json  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json  image_preload.cmake  sysbuild_modules.txt  zephyr_modules.txt  zephyr_settings.txt
RentScan/test_loopback/build_1/Kconfig/: Kconfig.modules  Kconfig.shield  Kconfig.shield.defconfig  Kconfig.sysbuild.modules
RentScan/test_loopback/build_1/modules/TraceRecorder/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/azure-sdk-for-c/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/canopennode/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/chre/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/cirrus-logic/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/cjson/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/cmsis/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/cmsis/cmsis/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/connectedhomeip/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/fatfs/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/hal_nordic/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/hal_nordic/nrfx/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/hal_wurthelektronik/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/liblc3/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/libmetal/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/littlefs/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/loramac-node/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/lvgl/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/lz4/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/mbedtls/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/mcuboot/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/memfault-firmware-sdk/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/mipi-sys-t/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/nanopb/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/nrf/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/nrf/drivers/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/nrf/ext/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/nrf/lib/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/nrf_hw_models/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/nrfxlib/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/open-amp/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/openthread/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/picolibc/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/segger/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/st/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/tinycrypt/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/trusted-firmware-m/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/uoscore-uedhoc/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/wfa-qt-control-app/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/zcbor/: cmake_install.cmake
RentScan/test_loopback/build_1/modules/zscilib/: cmake_install.cmake
RentScan/test_loopback/build_1/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  dts.cmake  edt.pickle  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.hex  zephyr.stat  zephyr_final.map  zephyr_pre0.map
RentScan/test_loopback/build_1/zephyr/arch/: cmake_install.cmake
RentScan/test_loopback/build_1/zephyr/boards/: cmake_install.cmake
RentScan/test_loopback/build_1/zephyr/drivers/: cmake_install.cmake
RentScan/test_loopback/build_1/zephyr/kconfig/: sources.txt
RentScan/test_loopback/build_1/zephyr/kernel/: cmake_install.cmake
RentScan/test_loopback/build_1/zephyr/lib/: cmake_install.cmake
RentScan/test_loopback/build_1/zephyr/soc/: cmake_install.cmake
RentScan/test_loopback/build_1/zephyr/subsys/: cmake_install.cmake
RentScan/test_loopback/src/: mock_ble_central.c  mock_ble_service.c  test_loopback.c
RentScan/test_loopback/tests/: CMakeLists.txt  test_rental_logic.c
RentScan_v3/firmware/: CMakeLists.txt  Makefile  README.md  prj.conf
RentScan_v3/firmware/include/: nfc_handler.h  rental_data.h  rental_service.h  storage_manager.h
RentScan_v3/firmware/include/compat/: README.md  app_button.h  app_error.h  app_timer.h  ble.h  ble_conn_params.h  ble_dis.h  ble_srv_common.h  nfc_ndef_msg.h  nfc_ndef_record.h  nfc_ndef_text_rec.h  nordic_common.h  nrf_fstorage.h  nrf_fstorage_impl.c  nrf_fstorage_sd.h  nrf_log.h  nrf_log_ctrl.h  nrf_log_default_backends.h  nrf_pwr_mgmt.h  sdk_common.h
RentScan_v3/firmware/src/: main.c  nfc_handler.c  rental_data.c  rental_service.c  storage_manager.c
ble_central/: prj.conf
main_application/: CMakeLists.txt  prj.conf
main_application/include/: ble_handler.h  nfc_handler.h  rental_logic.h
main_application/src/: ble_handler.c  main.c  nfc_handler.c  rental_logic.c
(+305 files in other folders)
